--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = extension-ci-tools
 	url = https://github.com/duckdb/extension-ci-tools
 	branch = main
+[submodule "dhtd"]
+	path = dhtd
+	url = https://github.com/mwarning/dhtd
