--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -19,6 +19,7 @@ jobs:
       duckdb_version: main
       ci_tools_version: main
       extension_name: dht
+      exclude_archs: 'windows_amd64_mingw, windows_amd64_rtools, windows_amd64'
 
   duckdb-stable-build:
     name: Build extension binaries
@@ -27,6 +28,7 @@ jobs:
       duckdb_version: v1.1.3
       ci_tools_version: v1.1.3
       extension_name: dht
+      exclude_archs: 'windows_amd64_mingw, windows_amd64_rtools, windows_amd64'
 
   duckdb-stable-deploy:
     name: Deploy extension binaries
@@ -37,3 +39,4 @@ jobs:
       duckdb_version: v1.1.3
       extension_name: dht
       deploy_latest: ${{ startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main' }}
+      exclude_archs: 'windows_amd64_mingw, windows_amd64_rtools, windows_amd64'
